--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "native-base": "^2.6.1",
     "prop-types": "^15.6.2",
     "react": "16.3.1",
     "react-native": "0.55.4",
+    "react-native-status-bar-height": "^2.0.0",
     "react-navigation": "^2.4.1",
     "react-navigation-fluid-transitions": "^0.2.1",
     "react-redux": "^5.0.7",
