--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-navigation-fluid-transitions": "^0.2.1",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
+    "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
