--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "babel-jest": "23.0.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-preset-react-native": "4.0.0",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.4",
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-import": "^2.12.0",
@@ -32,11 +35,26 @@
     "eslint-plugin-react": "^7.9.1",
     "eslint-plugin-react-native": "^3.2.1",
     "jest": "23.1.0",
+    "jest-fetch-mock": "^1.6.5",
     "prettier": "^1.13.5",
+    "react-dom": "^16.4.1",
     "react-test-renderer": "16.3.1",
-    "redux-devtools-extension": "^2.13.5"
+    "redux-devtools-extension": "^2.13.5",
+    "redux-mock-store": "^1.5.3"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "moduleDirectories": [
+      "node_modules"
+    ],
+    "setupFiles": [
+      "<rootDir>/jest/setup.js"
+    ],
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ],
+    "transformIgnorePatterns": [
+      "node_modules/(?!(jest-)?react-native|react-navigation|native-base)"
+    ]
   }
 }
